--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,4 +10,20 @@
     <welcome-file-list>
         <welcome-file>landing.jsp</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <error-code>400</error-code>
+        <location>/error-400.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-500.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>503</error-code>
+        <location>/error-503.jsp</location>
+    </error-page>
 </web-app>
